<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/primaryLightColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensajeLibre"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/bttxtCancelDialogDinamicoLibre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bttxtOkDialogDinamicoLibre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="3dp"
            android:text="@string/aceptar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />



    </FrameLayout>
</LinearLayout>