<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/primaryLightColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancia"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/txtDistanciaDialogDinamicoDistancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/bttxtCancelDialogDinamicoDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bttxtOkDialogDinamicoDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="3dp"
            android:text="@string/aceptar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />
    </FrameLayout>

</LinearLayout>