<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:background="@color/primaryLightColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejercicio"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>

        <Spinner
            android:id="@+id/spEjercicioEstaticoRepeticiones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeticiones"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>

            <EditText
                android:id="@+id/txtRepeticionesDialogEstaticoRepeticiones"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>

            <EditText
                android:id="@+id/txtSeriesDialogEstaticoRepeticiones"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/bttxtCancelDialogEstaticoRepeticiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bttxtOkDialogEstaticoRepeticiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="3dp"
            android:text="@string/aceptar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />



    </FrameLayout>
</LinearLayout>