<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/primaryLightColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejercicio"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>

        <Spinner
            android:id="@+id/spEjercicioEstaticoTiempo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempo"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtMTDialogEstaticoTiempo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:hint="MM"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
                    android:text=" : " />

                <EditText
                    android:id="@+id/txtSTDialogEstaticoTiempo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:hint="SS"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="3dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>

            <EditText
                android:id="@+id/txtSeriesDialogEstaticoTiempo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descanso"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/txtMDDialogEstaticoTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:hint="MM"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:text=" : " />

            <EditText
                android:id="@+id/txtSDDialogEstaticoTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:hint="SS"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/bttxtCancelDialogEstaticoTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bttxtOkDialogEstaticoTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="3dp"
            android:text="@string/aceptar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />



    </FrameLayout>
</LinearLayout>