<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:layout_margin="5dp">


    <fragment
        android:id="@+id/mapaFragmentStatDinamicoDetalle"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@color/primaryLightColor"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/velocidad"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:id="@+id/txtVelFragmentStatDinamicoDetalle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="AAAA"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tiempo"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:id="@+id/txtTiempoFragmentStatDinamicoDetalle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="AAAA"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/distancia"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:id="@+id/txtDistanciaFragmentStatDinamicoDetalle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="AAAA"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/descansoDin"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:id="@+id/txtTiempoPausaFragmentStatDinamicoDetalle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="AAAA"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>