<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    >

    <TextView
        android:id="@+id/txtejercicioFragmentEjercicioEstaticoRepeticiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Ejercicio"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeticiones"
            android:padding="3dp"/>
        <TextView
            android:id="@+id/txtrepeticionesFragmentEjercicioEstaticoRepeticiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="XX"
            android:padding="3dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="6">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:padding="3dp"
            android:textAlignment="textEnd"/>
        <TextView
            android:id="@+id/txtseriescompletadasFragmentEjercicioEstaticoRepeticiones"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="XX"
            android:textAlignment="textEnd"/>
        <TextView
            android:id="@+id/txtseriestotalesFragmentEjercicioEstaticoRepeticiones"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="/YY"/>

        <Button
            android:id="@+id/btsumFragmentEjercicioEstaticoRepeticiones"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="+1"
            android:background="@color/secondaryColor"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgFragmentEjercicioEstaticoRepeticiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_sentadillas"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"/>
    <Button
        android:id="@+id/btinterrumpirFragmentEjercicioEstaticoRepeticiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interrumpir"
        android:background="@color/secondaryLightColor"/>

</LinearLayout>