<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/primaryLightColor">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/txtHTDialogDinamicoTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:hint="HH"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="number"  />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:text=" : " />

            <EditText
                android:id="@+id/txtMTDialogDinamicoTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:hint="MM"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:text=" : " />

            <EditText
                android:id="@+id/txtSTDialogDinamicoTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:hint="SS"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/bttxtCancelDialogDinamicoTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bttxtOkDialogDinamicoTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="3dp"
            android:text="@string/aceptar"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />


    </FrameLayout>
</LinearLayout>
</LinearLayout>